--- a/tests/Makefile
+++ b/tests/Makefile
@@ -215,16 +215,16 @@ test-format-shell:
 	docker run --rm -v "$(realpath ..):/sh" -w /sh peterdavehello/shfmt shfmt -d -i 4 -ci $$($(FIND_SHELL_FILES))
 
 test-format-js:
-	cd ..; scripts/run-prettier --check --no-color --loglevel warn "{{enterprise/web,web}/htdocs/js/**/,}*.{j,t}s"
+	cd ..; npm ci && scripts/run-prettier --check --no-color --loglevel warn "{{enterprise/web,web}/htdocs/js/**/,}*.{j,t}s"
 
 test-typescript-types:
-	cd ..; scripts/check-typescript-types.sh
+	cd ..; npm ci && scripts/check-typescript-types.sh
 
 test-lint-js:
-	cd ..; scripts/check-js-lint.sh
+	cd ..; npm ci && scripts/check-js-lint.sh
 
 test-build-js:
-	npm -y ci && ENTERPRISE=yes MANAGED=no npm run build
+	npm ci && ENTERPRISE=yes MANAGED=no npm run build
 
 test-lint-js-docker:
 	../scripts/run-in-docker.sh make --quiet test-lint-js
