--- a/buildscripts/docker_image_aliases/IMAGE_TESTING/meta.yml
+++ b/buildscripts/docker_image_aliases/IMAGE_TESTING/meta.yml
@@ -1,2 +1,2 @@
 source: artifacts.lan.tribe29.com:4000/ubuntu-20.04:2.2.0-latest
-tag: artifacts.lan.tribe29.com:4000/ubuntu-20.04:2.2.0-latest-image-alias-2.2.0-9b0ccd2e17
+tag: artifacts.lan.tribe29.com:4000/ubuntu-20.04:2.2.0-2023.04.06-be69bc050c2
