add types to graphs.ts
Change-Id: I408424673fc7024d03c7a4f273405029b0058642

--- a/tsconfig.strict.json
+++ b/tsconfig.strict.json
@@ -18,7 +18,7 @@
         // add files here
         "./web/htdocs/js/modules/dashboard.ts",
         "./web/htdocs/js/modules/valuespecs.ts",
-        //"./web/htdocs/js/modules/graphs.ts",
+        "./web/htdocs/js/modules/graphs.ts",
         "./web/htdocs/js/modules/wato.ts",
         "./web/htdocs/js/modules/element_dragging.ts",
         "./web/htdocs/js/modules/password_meter.ts",
