Avoid BuildKit to enable --network
We fixed most of the issues with the BuildKit but this one seems to be trickier...
CMK-11276
https://github.com/moby/buildkit/issues/978

Change-Id: I2f066f175c019839f04f662df78b8e1391e448ef

--- a/docker_image/Makefile
+++ b/docker_image/Makefile
@@ -60,7 +60,7 @@ image: needed-packages
   		exit 1; \
   	fi; \
 	SECRET_CONTAINER_ID=$$($(SECRET_CONTAINER_ID_CMD)) ; \
-	docker build \
+	DOCKER_BUILDKIT=0 docker build \
 	    --network=container:$$SECRET_CONTAINER_ID \
 	    --build-arg CMK_VERSION="$(VERSION)" \
 	    --build-arg CMK_EDITION="$(EDITION)" \
@@ -79,7 +79,7 @@ image-daily: needed-packages
 	fi ; \
 	VERSION="$${VERSION:-$$(date +%F)}" ; \
 	VERSION="$${BRANCH_PREFIX}$${VERSION//-/.}" ; \
-	docker build \
+	DOCKER_BUILDKIT=0 docker build \
 	    --network=container:$$SECRET_CONTAINER_ID \
 	    --build-arg CMK_VERSION="$${VERSION}" \
 	    --build-arg CMK_EDITION=$(EDITION) \
