Avoid BuildKit to enable --network
We fixed most of the issues with the BuildKit but this one seems to be trickier...
CMK-11276
https://github.com/moby/buildkit/issues/978

Change-Id: I2f066f175c019839f04f662df78b8e1391e448ef

--- a/docker/Makefile
+++ b/docker/Makefile
@@ -47,7 +47,7 @@ check-mk-$(EDITION)-docker-$(VERSION).demo.tar.gz: image-demo
 
 image: needed-packages
 	SECRET_CONTAINER_ID=$$($(SECRET_CONTAINER_ID_CMD)) ; \
-	docker build \
+	DOCKER_BUILDKIT=0 docker build \
 	    --network=container:$$SECRET_CONTAINER_ID \
 	    --build-arg CMK_VERSION="$(VERSION)" \
 	    --build-arg CMK_EDITION="$(EDITION)" \
@@ -77,7 +77,7 @@ image-daily: needed-packages
 	fi ; \
 	VERSION="$${VERSION:-$$(date +%F)}" ; \
 	VERSION="$${BRANCH_PREFIX}$${VERSION//-/.}" ; \
-	docker build \
+	DOCKER_BUILDKIT=0 docker build \
 	    --network=container:$$SECRET_CONTAINER_ID \
 	    --build-arg CMK_VERSION="$${VERSION}" \
 	    --build-arg CMK_EDITION=$(EDITION) \
