--- a/buildscripts/scripts/stages.yml
+++ b/buildscripts/scripts/stages.yml
@@ -168,6 +168,7 @@ STAGES:
         PYTEST_ADDOPTS: "--junitxml=${RESULTS}/python3-unit-junit.xml --color=no"
       COMMAND: "make test-unit-docker"
       TEXT_ON_SKIP: 'No Python files changed'
+      RESULT_CHECK_TYPE: "JUNIT"
       RESULT_CHECK_FILE_PATTERN: "results/python3-unit-junit.xml"
 
     - NAME: 'Python License Headers Test'
@@ -178,6 +179,7 @@ STAGES:
         PYTHON_FILES: "${CHANGED_PYTHON_FILES}"
       COMMAND: "make test-license-headers-docker"
       TEXT_ON_SKIP: 'No Python files changed'
+      RESULT_CHECK_TYPE: "JUNIT"
       RESULT_CHECK_FILE_PATTERN: "results/python3-license-headers-junit.xml"
 
     - NAME: 'Python Pipfile Test'
@@ -187,6 +189,7 @@ STAGES:
         PYTEST_ADDOPTS: "--junitxml=${RESULTS}/python3-pipfile-junit.xml --color=no"
       COMMAND: "make test-pipfile-docker"
       TEXT_ON_SKIP: 'Pipfile and Pipfile.lock files not changed'
+      RESULT_CHECK_TYPE: "JUNIT"
       RESULT_CHECK_FILE_PATTERN: "results/python3-pipfile-junit.xml"
 
     - NAME: 'Python File Content Test'
@@ -197,6 +200,7 @@ STAGES:
         CHANGED_FILES_REL: "${CHANGED_FILES_REL}"
       COMMAND: "make test-file-content-docker"
       TEXT_ON_SKIP: 'No files changed'
+      RESULT_CHECK_TYPE: "JUNIT"
       RESULT_CHECK_FILE_PATTERN: "results/python3-file-content-junit.xml"
 
     - NAME: 'Python Werks Test'
@@ -206,6 +210,7 @@ STAGES:
         PYTEST_ADDOPTS: "--junitxml=${RESULTS}/python3-werks-junit.xml --color=no"
       COMMAND: "make test-werks-docker"
       TEXT_ON_SKIP: 'No Werk files changed'
+      RESULT_CHECK_TYPE: "JUNIT"
       RESULT_CHECK_FILE_PATTERN: "results/python3-werks-junit.xml"
 
     - NAME: 'Python Linting'
@@ -222,6 +227,7 @@ STAGES:
       ONLY_WHEN_NOT_EMPTY: CHANGED_IMAGE_TESTING,CHANGED_SHELL_FILES
       DIR: 'tests'
       COMMAND: "make --quiet test-format-shell &> ${RESULTS}/shell-format.txt"
+      RESULT_CHECK_TYPE: "CLANG"
       RESULT_CHECK_FILE_PATTERN: "results/shell-format.txt"
 
     - NAME: 'Shell check'
@@ -235,6 +241,7 @@ STAGES:
       ONLY_WHEN_NOT_EMPTY: CHANGED_IMAGE_TESTING,CHANGED_SHELL_FILES
       DIR: 'tests'
       COMMAND: "make test-unit-shell-docker &> ${RESULTS}/shell-unit.txt"
+      RESULT_CHECK_TYPE: "GCC"
       RESULT_CHECK_FILE_PATTERN: "results/shell-unit.txt"
 
     - NAME: 'JavaScript Format'
@@ -242,6 +249,7 @@ STAGES:
       DIR: 'tests'
       COMMAND: "make --quiet test-format-js-docker &> ${RESULTS}/js-prettier.txt"
       TEXT_ON_SKIP: 'No JavaScript files changed'
+      RESULT_CHECK_TYPE: "ESLINT"
       RESULT_CHECK_FILE_PATTERN: "results/js-prettier.txt"
 
     - NAME: 'JS Build'
@@ -249,6 +257,7 @@ STAGES:
       DIR: 'tests'
       COMMAND: 'make test-build-js-docker &> ${RESULTS}/js-build.txt'
       TEXT_ON_SKIP: 'No relevant JS/TS files changed'
+      RESULT_CHECK_TYPE: "GCC"
       RESULT_CHECK_FILE_PATTERN: "results/js-build.txt"
 
     - NAME: 'JS Lint'
@@ -256,6 +265,7 @@ STAGES:
       DIR: 'tests'
       COMMAND: 'make test-lint-js-docker &> ${RESULTS}/js-lint.txt'
       TEXT_ON_SKIP: 'No relevant JS/TS files changed'
+      RESULT_CHECK_TYPE: "ESLINT"
       RESULT_CHECK_FILE_PATTERN: "results/js-lint.txt"
 
     - NAME: 'TypeScript Type Checking'
@@ -263,6 +273,7 @@ STAGES:
       DIR: 'tests'
       COMMAND: 'make test-typescript-types-docker &> ${RESULTS}/js-types.txt'
       TEXT_ON_SKIP: 'No relevant JS/TS files changed'
+      RESULT_CHECK_TYPE: "TSLINT"
       RESULT_CHECK_FILE_PATTERN: "results/js-types.txt"
 
     - NAME: 'CSS Format'
@@ -270,6 +281,7 @@ STAGES:
       DIR: 'tests'
       COMMAND: "make --quiet test-format-css-docker &> ${RESULTS}/css-prettier.txt"
       TEXT_ON_SKIP: 'No CSS files changed'
+      RESULT_CHECK_TYPE: "ESLINT"
       RESULT_CHECK_FILE_PATTERN: "results/css-prettier.txt"
 
     - NAME: 'Agent Plugin Unit Tests'
