Unpinned schemathesis and fixed openapi tests
Change-Id: I4d971da068fb32ebd13f10b340aeea596642b1f6

--- a/Pipfile
+++ b/Pipfile
@@ -54,7 +54,7 @@ pipfile = "*" # for generating import names during int tests
 networkx = "*" # needed for py-import-cycles
 py-import-cycles = "*"  # used in tests/Makefile
 telnetlib3 = "*"  # used by Windows Agent tests
-schemathesis = "<3.18"  # used for openapi tests
+schemathesis = "*"  # used for openapi tests
 httpx = "*"  # used by agent receiver tests
 ruff = "*"
 types-beautifulsoup4 = "*"  # used for type checking
