Add make targets and script for bazel linting and formatting
Change-Id: I00bb9e9248f171365b11f121690130f772dc5320

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -247,6 +247,18 @@ test-format-css:
 test-format-css-docker:
 	../scripts/run-in-docker.sh make --quiet test-format-css
 
+test-lint-bazel:
+	../scripts/run-buildifier --lint=warn --mode=check
+
+test-lint-bazel-docker:
+	../scripts/run-in-docker.sh make --quiet test-lint-bazel
+
+test-format-bazel:
+	../scripts/run-buildifier --mode=check
+
+test-format-bazel-docker:
+	../scripts/run-in-docker.sh make --quiet test-format-bazel
+
 test-gui-crawl: prepare-playwright
 	$(PYTEST) -T gui_crawl $(PYTEST_SYSTEM_TEST_ARGS) $(realpath gui_crawl/test_gui_crawl.py)
 
