--- a/buildscripts/docker_image_aliases/IMAGE_TESTING/meta.yml
+++ b/buildscripts/docker_image_aliases/IMAGE_TESTING/meta.yml
@@ -1,2 +1,2 @@
 source: artifacts.lan.tribe29.com:4000/ubuntu-20.04:master-latest
-tag: artifacts.lan.tribe29.com:4000/ubuntu-20.04:master-2023.04.05-8cad9cf1776
+tag: artifacts.lan.tribe29.com:4000/ubuntu-20.04:master-latest-image-alias-master-72c35133c9
