werk config: cpe -> cce
Change-Id: Ib13cec4e0f21fec2a3d4f0ff3ce1867796d6dbcb

--- a/.werks/config
+++ b/.werks/config
@@ -2,7 +2,7 @@ editions = [
     ( "cre",          "Raw Edition" ),
     ( "cee",          "Enterprise Edition" ),
     ( "cme",          "Managed Services Edition" ),
-    ( "cpe",          "Plus Edition" ),
+    ( "cce",          "Cloud Edition" ),
 ]
 
 components = [
