15545 Introduce Python 3 compatibilty for mk_sap agent plugin
The mk_sap agent plugin can now be used with Python 3.

 Previous to this werk, mk_sap could only be used with Python 2, as it was
 dependent on the sapnwrfc library which is not compatible with python3.

 This werk ports mk_sap to use pyrfc which is only compatible with Python 3

The old mk_sap plugin can still be used with Python 2 and is now called mk_sap_2

If the host this agent plugin is executed on has Python 3 installed:
<ul>
<li>install pyrfc on this host (for more details have a look at the mk_sap.py agent plugin source code)</li>
<li>redeploy agent via bakery or manually</li>
</ul>

If the host this agent plugin is executed on has only Python 2 installed nothing changes. The Python 2 agent plugin
will automatically be used in this case.

Pull request: https://github.com/tribe29/checkmk/pull/367
bb8f622d47e5fd14c95b21df8c7ecaadafe90cd0

CMK-10866

Change-Id: Ibd91bb7b23f392779f803afb19e2ca927e31aa4d
Co-authored-by: Stefan Brinkmann <brinkmann.stefan@muenchener-verein.de>

--- a/agents/plugins/Makefile
+++ b/agents/plugins/Makefile
@@ -4,18 +4,20 @@ include ../../artifacts.make
 PIPENV := ../../scripts/run-pipenv
 THREE_TO_TWO := $(PIPENV) run 3to2
 
+# Not all plugins are working with Python 2 therefore these are skipped during 3to2 conversion
+PYTHON3_ONLY_PLUGINS := mk_sap.py
 # New plugins are expected to all have a .py extension. This will discover them
 # automatically.  Old plugins without extension are explicitly whitelistet here
 # to be found.
-PYTHON3_PLUGINS := $(wildcard *[^_2].py)
+PYTHON3_PLUGINS := $(filter-out $(PYTHON3_ONLY_PLUGINS), $(wildcard *[^_2].py))
 PYTHON2_PLUGINS := $(addsuffix _2.py,$(PYTHON3_PLUGINS:.py=))
 
 .PHONY: all clean
 
-all: $(PYTHON2_PLUGINS)
+all: $(PYTHON2_PLUGINS) $(addsuffix .py.checksum,$(PYTHON3_ONLY_PLUGINS:.py=))
 
 clean:
-	$(RM) *_2.py *.checksum
+	$(RM) $(PYTHON2_PLUGINS) *.checksum
 
 # During creation of the source packages we update the Checkmk version using
 # "make setversion" from the base directory. This updates the Checkmk version
