Add Bazel format and lint stages
Change-Id: I798a4c1a7362cf0bad605c99bbce67d2cd7f5047

Format bazel files with buildifier

ignore missing module doc strings for all bazel files

Change-Id: I5cd97b5582afa53f634ac6f029d2a6d2a765c0f6

--- a/buildscripts/docker_image_aliases/IMAGE_TESTING/meta.yml
+++ b/buildscripts/docker_image_aliases/IMAGE_TESTING/meta.yml
@@ -1,2 +1,2 @@
 source: artifacts.lan.tribe29.com:4000/ubuntu-20.04:master-latest
-tag: artifacts.lan.tribe29.com:4000/ubuntu-20.04:master-latest-image-alias-master-72c35133c9
+tag: artifacts.lan.tribe29.com:4000/ubuntu-20.04:master-2023.04.28-dc8e648ba92
