--- a/omd/packages/redis/skeleton/BUILD
+++ b/omd/packages/redis/skeleton/BUILD
@@ -1,15 +1,13 @@
 filegroup(
-  name = "skel",
-  srcs =  glob([
-    "etc/**",
-  ]),
-  visibility = ["//visibility:public"],
+    name = "skel",
+    srcs = glob([
+        "etc/**",
+    ]),
+    visibility = ["//visibility:public"],
 )
 
 filegroup(
-  name = "skel_root",
-  srcs =  glob([
-    "BUILD",
-  ]),
-  visibility = ["//visibility:public"],
+    name = "skel_root",
+    srcs = ["BUILD"],
+    visibility = ["//visibility:public"],
 )
